Use the YouTube link for the Demo

--- a/README.adoc
+++ b/README.adoc
@@ -3,8 +3,7 @@
 This repository contains some RHQ-supporting bits around Docker, like
 a Dockerfile to get started with RHQ and so on.
 
-Demo how RHQ Dockerfile works
-https://plus.google.com/u/0/events/clp274bhmdfvi4ol7csh2fd7n38?authkey=CPGuh8eZtrG5oAE
+Demo how RHQ Dockerfile works on YouTube: http://youtu.be/hx43fQh-RVQ
 
 To build and run rhq docker container:
 
